fix alignment

--- a/src/components/Banner/style.module.scss
+++ b/src/components/Banner/style.module.scss
@@ -4,6 +4,7 @@
 
     .bg {
         display: flex;
+        justify-content: center;
     }
 
     section {
